--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,26 +1,39 @@
 # The name of the world to update spawn in (default: "world")
 world-name: world
 
-# How often to update the spawn location (choose keyword or specify ticks manually)
-# Options:
+# How often to update the spawn location using ticks. Options:
 # - daily    -> 24 hours (1728000 ticks)
 # - weekly   -> 7 days (12096000 ticks)
 # - monthly  -> 30 days (51840000 ticks)
 # - yearly   -> 365 days (631152000 ticks)
-# Or specify exact ticks as a number.
-update_interval: daily
+# Or specify an exact tick value as a number. Use 0 for only player respawns trigger.
+update_interval: 0
 
-# Note: default 20 ticks = 1 second, so adjust accordingly.
+# Additionally, you can also trigger spawn updates when a player respawns.
+# Options:
+# - none            -> Do not update spawn on respawn events.
+# - respawn-no-bed  -> Update spawn only when a player respawns without a bed spawn.
+# - respawn-all     -> Update spawn on every respawn.
+update_on_respawn: respawn-no-bed
 
+# Mode of spawn movement
+# Available modes: spiral, square
+mode: square
+
+
+# Spiral Mode Configuration
 # Step distance per spiral step in blocks.
-# Lower values make the spiral tighter with smaller steps.
-# Higher values make the spiral looser with larger steps.
 spiral_step_distance: 4
 
-# Angle increment divisor that controls how tightly the spiral turns.
-# Lower values increase the turn rate, making the spiral denser.
-# Higher values decrease the turn rate, making the spiral expand more.
+# Angle increment divisor controlling spiral turn density.
 spiral_angle_divisor: 16
 
+
+# Square Mode Configuration
+# The step size between each square spawn update.
+# Options:
+# - A number: Use as a multiplier between steps.
+# - "chunkcenter": Place spawn at the center of each chunk.
+square_step: chunkcenter
 
 
