--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ target/classes/hasjamon/block4block/SpiralSpawnPlugin.class
 target/classes/hasjamon/block4block/SpiralSpawnManager.class
 target/classes/hasjamon/block4block/SpiralSpawnManager$1.class
 target/classes/config.yml
+.idea/workspace.xml
